but not anymore

--- a/some-legacy-project/package.json
+++ b/some-legacy-project/package.json
@@ -7,5 +7,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "peerDependencies": {}
+  "peerDependencies": {
+    "vue-i18n": "^8.28.2"
+  }
 }
