--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "nuxt": "^3.14.1592",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-i18n": "^10.0.0"
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^9.1.0",
